# Foundation

./: .gitignore  .pdm-python  db.sqlite3  pyproject.toml
accounts/: forms.py  urls.py  views.py
accounts/templates/: home.html  login.html
accounts/templates/components/: base.html  navbar.html
book_scanner/: apps.py  urls.py  views.py
book_scanner/templates/: book_scanner.html
foundation/: .env  settings.py  urls.py
spider_cam/: apps.py  urls.py  views.py
spider_cam/templates/: funny_spider.html  spider_cam.html
