[project]
name = "foundation"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Ian Drake", email = "ihddrake@gmail.com"},
]
dependencies = ["django>=5.1.7", "django-environ>=0.12.0", "opencv-python>=4.11.0.86", "numpy>=2.2.4", "django-cors-headers>=4.7.0"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
